# trabalho_gcs

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  environment.sh  install.sh  katw_1.0-1_amd64.deb  oldCMakeList.txt  oldCMakeLists.txt  test.xml  uninstall.sh
Map_Editor/: Half-Baked Editor  Half-Baked Editor.depend  Half-Baked Editor.layout  main.cpp  map.cpp  size.txt~
Scientist_Story/: .spriteManager.h.swn  Scientist Story - Refatorado  Scientist Story - Refatorado.cbp  Scientist Story - Refatorado.depend  Scientist Story - Refatorado_build_log.html  dialoguewindow.cpp  entidade.cpp  gameState.cpp  gameState.h  inimigo.h  inimigoLastBoss.cpp  inputmanager.cpp  interfaceMenu.h  map.cpp  npc.cpp  personagem.h  player.cpp  player.h  presentationState.h  savedata.save  sound.h  spriteManager.h  state.h  tile.h  winloseState.cpp  winloseState.h
debian/: changelog  control  copyright  files  katw.substvars
include/: AnimatedGraphics.h  Enemy.h  Game.h  GameObject.h  GameObjectFactory.h  GameState.h  GameStateMachine.h  Input.h  Layer.h  (+21 more)
src/: AnimatedGraphics.cpp  CMakeLists.txt  Enemy.cpp  Game.cpp  GameObject.cpp  GameObjectFactory.cpp  GameStateMachine.cpp  Input.cpp  InputHandler.cpp  Level.cpp  LevelParser.cpp  Main.cpp  MainMenuState.cpp  MenuButton.cpp  MenuState.cpp  ObjectLayer.cpp  Objectlayer.cpp  PauseState.cpp  PlayState.cpp  Player.cpp  SDLGameObject.cpp  StateParser.cpp  TextureManager.cpp  TileLayer.cpp  character.cpp  character.h  game.cpp  main.cpp  texture.cpp  texture.h  window.cpp  window.h
src/engine/: main_loop.cpp  window.cpp
(+53 files in other folders)
